# credit_card_fraud_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: main.ipynb
scripts/: download.sh
src/credit_card_fraud_detection/: main.py
tests/: eigenvector_eigenvalue.py  kfold.ipynb  kfold_split.py  new_index.py  pca.py  pca_fail.py  pca_test.py
